imagens dos lanches

--- a/style.css
+++ b/style.css
@@ -61,16 +61,12 @@ ul li {
 .description {
   color:  #309900;
 }
-
-li .details{
-  max-width: 240px;
-}
 .details h3 {
   margin-bottom: 8px;
   font-size: 16px;
   line-height: 19px;
 }
-.detaisl p {
+.details p {
   color: rgba(0,0,0,0.6);
   font-size: 14px;
   line-height: 21px;
